# ls-cx-ss

./: README.md  README_CN.md  ls-cx-ss  pyproject.toml
.githooks/: pre-commit
.github/workflows/: build-single-file.yml
docs/: index.html  install.py  ls-cx-ss.py
ls_cx_ss/: __main__.py  cli.py  distribution.py  model.py  query.py  render.py  scanner.py  timefmt.py  tui.py
scripts/: build_single_file.py
