[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ls-cx-ss"
version = "0.2.0"
description = "List, search, sort, and resume Codex sessions across providers for the current working directory."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "lxchx"}
]
license = {text = "MIT"}
dependencies = []

[project.scripts]
ls-cx-ss = "ls_cx_ss.cli:main"

[tool.setuptools]
packages = ["ls_cx_ss"]
