[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ls-cx-ss"
version = "0.3.5"
description = "List, search, sort, and resume Codex sessions across providers for the current working directory."
readme = "README.md"
requires-python = ">=3.6"
authors = [
  {name = "lxchx"}
]
license = {text = "MIT"}
dependencies = []

[project.scripts]
ls-cx-ss = "ls_cx_ss.cli:main"

[tool.setuptools]
packages = ["ls_cx_ss"]
